--- a/03静态页面/skill.html
+++ b/03静态页面/skill.html
@@ -10,12 +10,12 @@
 	<div class="wrapper">
 		<nav><!-- nav -->
 			<ul>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">Photoshop</a></li>
-				<li><a href="#">Illustrator</a></li>
-				<li><a href="#">Premiere</a></li>
-				<li><a href="#">After Effects</a></li>
-				<li><a href="#">DreamWeaver</a></li>
+				<li><a href="http://baidu.com">HOME</a></li>
+				<li><a href="http://baidu.com">Photoshop</a></li>
+				<li><a href="http://baidu.com">Illustrator</a></li>
+				<li><a href="http://baidu.com">Premiere</a></li>
+				<li><a href="http://baidu.com">After Effects</a></li>
+				<li><a href="http://baidu.com">DreamWeaver</a></li>
 			</ul>
 		</nav><!-- end of nav -->
 		<header>
@@ -27,29 +27,29 @@
 		<aside id="sidebar1"><!-- aside -->
 			<h3>Things to do</h3>
 			<ul>
-				<li><a href="#">Play Games</a></li>
-				<li><a href="#">Chat With riends</a></li>
-				<li><a href="#">Swap Stories</a></li>
-				<li><a href="#">Sell Stuff</a></li>
-				<li><a href="#">Buy Stuff</a></li>
-				<li><a href="#">Trade Stuff</a></li>
+				<li><a href="http://baidu.com">Play Games</a></li>
+				<li><a href="http://baidu.com">Chat With riends</a></li>
+				<li><a href="http://baidu.com">Swap Stories</a></li>
+				<li><a href="http://baidu.com">Sell Stuff</a></li>
+				<li><a href="http://baidu.com">Buy Stuff</a></li>
+				<li><a href="http://baidu.com">Trade Stuff</a></li>
 			</ul>
 			<h3>Sponsors</h3><!-- ad -->
 			<img class="ad" src="images/ad1.jpg" alt="">
 			<img class="ad" src="images/ad2.jpg" alt="">
 			<h3>Related Articles</h3>
 			<ul>
-				<li><a href="#">Curabitur sodales</a></li>
-				<li><a href="#">Sed dignissim</a></li>
-				<li><a href="#">Fusce nec</a></li>
-				<li><a href="#">Curabitur sodales</a></li>
-				<li><a href="#">Sed dignissim</a></li>
-				<li><a href="#">Fusce nec</a></li>
+				<li><a href="http://baidu.com">Curabitur sodales</a></li>
+				<li><a href="http://baidu.com">Sed dignissim</a></li>
+				<li><a href="http://baidu.com">Fusce nec</a></li>
+				<li><a href="http://baidu.com">Curabitur sodales</a></li>
+				<li><a href="http://baidu.com">Sed dignissim</a></li>
+				<li><a href="http://baidu.com">Fusce nec</a></li>
 			</ul>
 			<h3>Contact with us</h3>
 			<ul>
-				<li><a href="#">QQ</a></li>
-				<li><a href="#">Weibo</a></li>
+				<li><a href="http://baidu.com">QQ</a></li>
+				<li><a href="http://baidu.com">Weibo</a></li>
 			</ul>
 		</aside><!-- end of aside -->
 		<section id="content">
@@ -67,29 +67,29 @@
 		<aside id="sidebar2">
 			<h3>Stuff</h3>
 			<ul>
-				<li><a href="#">yellow</a></li>
-				<li><a href="#">yellow</a></li>
-				<li><a href="#">yellow</a></li>
+				<li><a href="http://baidu.com">yellow</a></li>
+				<li><a href="http://baidu.com">yellow</a></li>
+				<li><a href="http://baidu.com">yellow</a></li>
 			</ul>
 			<h3>Creative</h3>
 			<ul>
-				<li><a href="#">HTML</a></li>
-				<li><a href="#">HTML</a></li>
-				<li><a href="#">HTML</a></li>
+				<li><a href="http://baidu.com">HTML</a></li>
+				<li><a href="http://baidu.com">HTML</a></li>
+				<li><a href="http://baidu.com">HTML</a></li>
 			</ul>
 			<h3>Did you konw?</h3>
 			<ul>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">CSS</a></li>
+				<li><a href="http://baidu.com">CSS</a></li>
+				<li><a href="http://baidu.com">CSS</a></li>
+				<li><a href="http://baidu.com">CSS</a></li>
+				<li><a href="http://baidu.com">CSS</a></li>
+				<li><a href="http://baidu.com">CSS</a></li>
 			</ul>
 			<h3>Learn more</h3>
 			<ul>
-				<li><a href="#">JS</a></li>
-				<li><a href="#">JS</a></li>
-				<li><a href="#">JS</a></li>
+				<li><a href="http://baidu.com">JS</a></li>
+				<li><a href="http://baidu.com">JS</a></li>
+				<li><a href="http://baidu.com">JS</a></li>
 			</ul>
 		</aside><!-- end of aside -->
 		<footer class="clearfix">
@@ -97,30 +97,30 @@
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
-							<li><a href="#">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a href="http://baidu.com">jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
-					<p>&copy;2017 <a href="#">you can do better</a></p>
+					<p>&copy;2017 <a href="http://baidu.com">you can do better</a></p>
 				</section>
 			</div>
 		</footer>
