--- a/03静态页面/skill.html
+++ b/03静态页面/skill.html
@@ -10,12 +10,12 @@
 	<div class="wrapper">
 		<nav><!-- nav -->
 			<ul>
-				<li><a href="http://baidu.com">HOME</a></li>
-				<li><a href="http://baidu.com">Photoshop</a></li>
-				<li><a href="http://baidu.com">Illustrator</a></li>
-				<li><a href="http://baidu.com">Premiere</a></li>
-				<li><a href="http://baidu.com">After Effects</a></li>
-				<li><a href="http://baidu.com">DreamWeaver</a></li>
+				<li><a>HOME</a></li>
+				<li><a>Photoshop</a></li>
+				<li><a>Illustrator</a></li>
+				<li><a>Premiere</a></li>
+				<li><a>After Effects</a></li>
+				<li><a>DreamWeaver</a></li>
 			</ul>
 		</nav><!-- end of nav -->
 		<header>
@@ -27,29 +27,29 @@
 		<aside id="sidebar1"><!-- aside -->
 			<h3>Things to do</h3>
 			<ul>
-				<li><a href="http://baidu.com">Play Games</a></li>
-				<li><a href="http://baidu.com">Chat With riends</a></li>
-				<li><a href="http://baidu.com">Swap Stories</a></li>
-				<li><a href="http://baidu.com">Sell Stuff</a></li>
-				<li><a href="http://baidu.com">Buy Stuff</a></li>
-				<li><a href="http://baidu.com">Trade Stuff</a></li>
+				<li><a>Play Games</a></li>
+				<li><a>Chat With riends</a></li>
+				<li><a>Swap Stories</a></li>
+				<li><a>Sell Stuff</a></li>
+				<li><a>Buy Stuff</a></li>
+				<li><a>Trade Stuff</a></li>
 			</ul>
 			<h3>Sponsors</h3><!-- ad -->
 			<img class="ad" src="images/ad1.jpg" alt="">
 			<img class="ad" src="images/ad2.jpg" alt="">
 			<h3>Related Articles</h3>
 			<ul>
-				<li><a href="http://baidu.com">Curabitur sodales</a></li>
-				<li><a href="http://baidu.com">Sed dignissim</a></li>
-				<li><a href="http://baidu.com">Fusce nec</a></li>
-				<li><a href="http://baidu.com">Curabitur sodales</a></li>
-				<li><a href="http://baidu.com">Sed dignissim</a></li>
-				<li><a href="http://baidu.com">Fusce nec</a></li>
+				<li><a>Curabitur sodales</a></li>
+				<li><a>Sed dignissim</a></li>
+				<li><a>Fusce nec</a></li>
+				<li><a>Curabitur sodales</a></li>
+				<li><a>Sed dignissim</a></li>
+				<li><a>Fusce nec</a></li>
 			</ul>
 			<h3>Contact with us</h3>
 			<ul>
-				<li><a href="http://baidu.com">QQ</a></li>
-				<li><a href="http://baidu.com">Weibo</a></li>
+				<li><a>QQ</a></li>
+				<li><a>Weibo</a></li>
 			</ul>
 		</aside><!-- end of aside -->
 		<section id="content">
@@ -67,29 +67,29 @@
 		<aside id="sidebar2">
 			<h3>Stuff</h3>
 			<ul>
-				<li><a href="http://baidu.com">yellow</a></li>
-				<li><a href="http://baidu.com">yellow</a></li>
-				<li><a href="http://baidu.com">yellow</a></li>
+				<li><a>yellow</a></li>
+				<li><a>yellow</a></li>
+				<li><a>yellow</a></li>
 			</ul>
 			<h3>Creative</h3>
 			<ul>
-				<li><a href="http://baidu.com">HTML</a></li>
-				<li><a href="http://baidu.com">HTML</a></li>
-				<li><a href="http://baidu.com">HTML</a></li>
+				<li><a>HTML</a></li>
+				<li><a>HTML</a></li>
+				<li><a>HTML</a></li>
 			</ul>
 			<h3>Did you konw?</h3>
 			<ul>
-				<li><a href="http://baidu.com">CSS</a></li>
-				<li><a href="http://baidu.com">CSS</a></li>
-				<li><a href="http://baidu.com">CSS</a></li>
-				<li><a href="http://baidu.com">CSS</a></li>
-				<li><a href="http://baidu.com">CSS</a></li>
+				<li><a>CSS</a></li>
+				<li><a>CSS</a></li>
+				<li><a>CSS</a></li>
+				<li><a>CSS</a></li>
+				<li><a>CSS</a></li>
 			</ul>
 			<h3>Learn more</h3>
 			<ul>
-				<li><a href="http://baidu.com">JS</a></li>
-				<li><a href="http://baidu.com">JS</a></li>
-				<li><a href="http://baidu.com">JS</a></li>
+				<li><a>JS</a></li>
+				<li><a>JS</a></li>
+				<li><a>JS</a></li>
 			</ul>
 		</aside><!-- end of aside -->
 		<footer class="clearfix">
@@ -97,30 +97,30 @@
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
 						<ul>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
-							<li><a href="http://baidu.com">jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
+							<li><a>jquery</a></li>
 						</ul>
 				</section>
 				<section>
 					<h4>Friends</h4>
-					<p>&copy;2017 <a href="http://baidu.com">you can do better</a></p>
+					<p>&copy;2017 <a>you can do better</a></p>
 				</section>
 			</div>
 		</footer>
