模块化布局

--- a/07电商网站/index.html
+++ b/07电商网站/index.html
@@ -62,7 +62,7 @@
 				<input class="btn" type="submit" value="">
 			</form>	
 		</div>
-		<p class="key-text"><a href="#">小龙虾</a>、<a href="#">红烧肉</a>、<a href="#">红烧猪蹄</a>、<a href="#">香水百合</a>、<a href="#">香水百合</a>、<a href="#">糖醋排骨</a>、<a href="#">麻辣香锅</a>、<a href="#">石斑鱼</a>...</p>
+		<p class="key-text"><a href="#">小龙虾</a>、<a href="#">红烧肉</a>、<a href="#">红烧猪蹄</a>、<a href="#">香水百合</a>、<a href="#">糖醋排骨</a>、<a href="#">麻辣香锅</a>、<a href="#">石斑鱼</a>...</p>
 	</div>
 	<!-- 主体 -->
 	<div class="content clear">
@@ -94,7 +94,7 @@
 						</li>
 					</ul>
 					<div class="con">
-						<ul class="hot-list">
+						<ul class="hot-list clear">
 							<li>
 								<div class="img"><a href="#"><img src="img/content/hot-list-1.jpg" alt="好吃的"></a></div>
 								<div class="text">
@@ -129,39 +129,244 @@
 								</div>
 							</li>
 						</ul>
+						<a href="#" class="more hot-list-more">more<span class="more-icon"><span></span></span></a>
 					</div>
 				</div>
 			</div>
 			<div class="main-ad"><a href="#"><img src="img/ad/ad1.jpg" alt=""></a></div>
 			<!-- 2 -->
 			<div class="clear main-wrap">
+				<div class="activity fl">
+					<h2 class="day-title">
+						<strong>Lucky YODAY</strong>
+						<span>每日活动</span>
+						<em>2017.8</em>
+					</h2>
+					<div class="con">
+						<div class="info clear">
+							<div class="img fl"><img src="img/content/activity-img.jpg" alt=""><span></span></div>
+							<div class="text fr">
+								<h3>
+									<em class="gradient">02</em>
+									<em class="gradient">11</em>
+									<span>本日主题：做电商网站</span>
+								</h3>
+								<p>迟到的荣誉，加油棒棒哒，还有好几个网站练习，说好的孰能生巧呢</p>
+							</div>
+						</div>
+						<div class="calendar">
+							<h3>
+								<span>MON</span>
+								<span>TUE</span>
+								<span>WED</span>
+								<span>THU</span>
+								<span>FRI</span>
+								<span>SAT</span>
+								<span>SUN</span>
+							</h3>
+							<ol>
+								<li class="normal">29</li>
+								<li class="normal">30</li>
+								<li>1</li>
+								<li>2</li>
+								<li>3
+									<img class="active" src="img/content/calendar-active.png" alt="">
+								</li>
+								<li>4</li>
+								<li>5</li>
+								<li>6</li>
+								<li>7</li>
+								<li>8</li>
+								<li>9</li>
+								<li>10</li>
+								<li>11</li>
+								<li>12</li>
+								<li>13</li>
+								<li>14</li>
+								<li>15</li>
+								<li>16</li>
+								<li>17</li>
+								<li>18</li>
+								<li>19</li>
+								<li>20</li>
+								<li>21</li>
+								<li>22</li>
+								<li>23</li>
+								<li>24</li>
+								<li>25
+									<img class="img" src="img/content/calendar-img.png" alt="">
+								</li>
+								<li>26</li>
+								<li>27</li>
+								<li>28</li>
+								<li>29</li>
+								<li>30</li>
+								<li class="normal">1</li>
+								<li class="normal">2</li>
+								<li class="normal">3</li>
+							</ol>
+							<div class="today-info">
+								<span></span>
+								<img class="img fl" src="img/content/calendar-img.png" alt="">
+								<div class="text fr">
+									<h4><strong>SAT</strong> 本日主题</h4>
+									<p>还在写电商网站，真真是长长长长啊慢慢慢慢啊</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="recommend fr">
+					<h2 class="day-title">
+						<strong>RECOMMEND</strong>
+						<span>精彩推荐</span>
+					</h2>
+					<div class="pic">
+						<ul>
+							<li><a href="#"><img src="img/content/recommend-img1.jpg" alt=""></a></li>
+							<li><a href="#"><img src="img/content/recommend-img2.jpg" alt=""></a></li>
+							<li><a href="#"><img src="img/content/recommend-img3.jpg" alt=""></a></li>
+						</ul>
+						<ol>
+							<li class="active"><a href="#"><img src="img/content/recommend-img1.jpg" alt=""></a></li>
+							<li><a href="#"><img src="img/content/recommend-img2.jpg" alt=""></a></li>
+							<li><a href="#"><img src="img/content/recommend-img3.jpg" alt=""></a></li>
+						</ol>
+						<p>精彩活动享不停</p>
+					</div>
+					<ul class="recommend-list">	
+						<li>
+							<span class="col1"><img src="img/recommend-pic1.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+						<li>
+							<span class="col1"><img src="img/recommend-pic2.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+						<li>
+							<span class="col1"><img src="img/recommend-pic1.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+						<li>
+							<span class="col1"><img src="img/recommend-pic2.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+						<li>
+							<span class="col1"><img src="img/recommend-pic1.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+						<li>
+							<span class="col1"><img src="img/recommend-pic2.gif" alt=""></span>
+							<span class="col2"><a href="#">老店换新颜：棒棒哒</a></span>
+							<span class="col3">12155</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!-- 3 -->
+			<div class="clear main-wrap">
 				<div class="section fl">
 					<h2 class="main-title">
 						<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
-						<strong>SHOP<span> 今日推荐</span></strong>
+						<strong>LIFTSTYLE KNOW<span> 知道分子</span></strong>
 					</h2>
+					<div class="tab">
+						<ul>
+							<li class="active gradient">有人在问
+								<a href="javascript:" class="triangle-down-red"></a>
+							</li>
+							<li class="gradient">有人知道
+								<a href="javascript:" class="triangle-down-gray"></a>
+							</li>
+							<li class="gradient">有人知道
+								<a href="javascript:" class="triangle-down-gray"></a>
+							</li>
+						</ul>
+					</div>
+					<ul class="list-section">	
+						<li class="title">
+							<span class="col1">标题</span>
+							<span class="col2">状态</span>
+						</li>
+						<li>
+							<span class="col1"><a href="#"><em>[<span>美食</span>]</em>至尊大闸蟹(雍和宫店）人气王</a></span>
+							<span class="col2"><img src="img/col2.png" alt=""></span>
+						</li>
+						<li>
+							<span class="col1"><a href="#"><em>[<span>休闲</span>]</em>至尊大闸蟹(雍和宫店）人气王</a></span>
+							<span class="col2"><img src="img/col1.png" alt=""></span>
+						</li>
+						<li>
+							<span class="col1"><a href="#"><em>[<span>美食</span>]</em>至尊大闸蟹(雍和宫店）人气王</a></span>
+							<span class="col2"><img src="img/col2.png" alt=""></span>
+						</li>
+						<li>
+							<span class="col1"><a href="#"><em>[<span>购物</span>]</em>至尊大闸蟹(雍和宫店）人气王</a></span>
+							<span class="col2"><img src="img/col2.png" alt=""></span>
+						</li>
+						<li>
+							<span class="col1"><a href="#"><em>[<span>购物</span>]</em>至尊大闸蟹(雍和宫店）人气王</a></span>
+							<span class="col2"><img src="img/col1.png" alt=""></span>
+						</li>
+					</ul>
+					<div class="soso">
+						<form action="#">
+							<strong>搜搜谁知道:</strong>
+							<input type="text" class="text">
+							<input type="submit" class="btn" value="GO">
+						</form>
+					</div>
 				</div>
 				<div class="section fr">
 					<h2 class="main-title">
 						<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
-						<strong>SHOP<span> 今日推荐</span></strong>
+						<strong>HOT<span> 红人烧客</span></strong>
 					</h2>
+					<div class="hot-area">
+						<ul>
+							<li><img src="img/content/hot1.jpg" alt=""></li>
+							<li><img src="img/content/hot2.jpg" alt=""></li>
+							<li class="area1">
+								<div class="info">
+									<p>
+										用户名：<br/>
+										区域：<br/>
+										人气：12334<br/>
+									</p>
+								</div>
+								<img src="img/content/hot3.jpg" alt="">
+							</li>
+							<li><img src="img/content/hot4.jpg" alt=""></li>
+							<li class="area2"><img src="img/content/hot1.jpg" alt=""></li>
+							<li class="area2"><img src="img/content/hot2.jpg" alt=""></li>
+							<li><img src="img/content/hot4.jpg" alt=""></li>
+							<li><img src="img/content/hot2.jpg" alt=""></li>
+							<li class="area2"><img src="img/content/hot1.jpg" alt=""></li>
+							<li class="area2"><img src="img/content/hot4.jpg" alt=""></li>
+							<li class="area2"><img src="img/content/hot2.jpg" alt=""></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="main-ad"><a href="#"><img src="img/ad/ad1.jpg" alt=""></a></div>
-			<!-- 3 -->
+			<!-- 4 -->
 			<div class="clear main-wrap">
 				<div class="options fl">
 					<ul class="nav">
 						<li class="active fl">
 							<h2 class="main-title">
-								<strong>HOT<span> 红店铺</span></strong>
+								<strong>SUBWAY<span> 地铁交通</span></strong>
 								<a href="javascript:" class="triangle-down-red"></a>
 							</h2>
 						</li>
 						<li class="gradient fr">
 							<h2 class="main-title">
-								<strong>HOT<span> 热卖</span></strong>
+								<strong>MAP<span> 生活圈</span></strong>
 								<a href="javascript:" class="triangle-down-gray"></a>
 							</h2>
 						</li>
@@ -175,7 +380,7 @@
 					</h2>
 				</div>
 			</div>
-			<!-- 4 -->
+			<!-- 5 -->
 			<div class="clear main-wrap">
 				<div class="section fl">
 					<h2 class="main-title">
@@ -185,8 +390,68 @@
 				<div class="section fr">
 					<h2 class="main-title">
 						<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
-						<strong>SHOP<span> 今日推荐</span></strong>
+						<strong>BBS<span> 论坛</span></strong>
 					</h2>
+					<div class="bbs">
+						<ol>
+							<li class="active">
+								<strong>01</strong>
+								<img src="img/content/bbs-img.jpg" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+							<li>
+								<strong>01</strong>
+								<img src="img/content/bbs-img.gif" alt="">
+								<a href="#">你没见过的餐厅</a>
+								<span>阿瑞斯</span>
+								<em>ONE</em>
+								<b>世说新语</b>
+							</li>
+						</ol>	
+					</div>
 				</div>
 			</div>
 		</div>
@@ -197,6 +462,28 @@
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
 					<strong>LOAD<span> 登录</span></strong>
 				</h2>
+				<div class="login-form">
+					<form action="#">
+						<ul>
+							<li>
+								<span>用户名：</span>
+								<input type="text" class="text">
+								<label>
+									<input type="checkbox" class="checkbox">
+									<strong>记住我</strong>
+								</label>
+							</li>
+							<li>
+								<span>密&nbsp;&nbsp; 码：</span>
+								<input type="password" class="password">
+								<label>
+									<input type="checkbox" class="checkbox">
+									<strong>记住密码</strong>
+								</label>
+							</li>
+						</ul>
+					</form>
+				</div>
 			</div>
 			<div class="side-ad"><a href="#"><img src="img/ad/ad2.jpg" alt=""></a></div>
 			<div class="side-ad"><a href="#"><img src="img/ad/ad3.jpg" alt=""></a></div>
@@ -205,30 +492,172 @@
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
 					<strong>COUPONS<span> 抢卷儿</span></strong>
 				</h2>
+				<div class="tab">
+					<ul>
+						<li class="active gradient">人气
+							<a href="javascript:" class="triangle-down-red"></a>
+						</li>
+						<li class="gradient">推荐
+							<a href="javascript:" class="triangle-down-gray"></a>
+						</li>
+						<li class="gradient">最新
+							<a href="javascript:" class="triangle-down-gray"></a>
+						</li>
+					</ul>
+				</div>
+				<ul class="list-section">	
+					<li class="title">
+						<span class="col1">商店</span>
+						<span class="col2">火爆</span>
+						<span class="col3">打印</span>
+					</li>
+					<li>
+						<span class="col1"><a href="#">超级火爆人气王</a></span>
+						<span class="col2">12%</span>
+						<span class="col3">345</span>
+					</li>
+					<li>
+						<span class="col1"><a href="#">超级火爆人气王</a></span>
+						<span class="col2">12%</span>
+						<span class="col3">345</span>
+					</li>
+					<li>
+						<span class="col1"><a href="#">超级火爆人气王</a></span>
+						<span class="col2">12%</span>
+						<span class="col3">345</span>
+					</li>
+					<li>
+						<span class="col1"><a href="#">超级火爆人气王</a></span>
+						<span class="col2">12%</span>
+						<span class="col3">345</span>
+					</li>
+				</ul>
 			</div>
 			<div class="side-section">
 				<h2 class="main-title">
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
 					<strong>SHOP<span> 今日推荐</span></strong>
 				</h2>
+				<div class="wrap1">
+					<ul class="pic-list">
+						<li>
+							<div class="img fl"><a href="#"><img src="img/content/wrap1-pic-1.jpg" alt="好吃的"></a></div>
+							<div class="text fr">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="img fl"><a href="#"><img src="img/content/wrap1-pic-2.jpg" alt="好吃的"></a></div>
+							<div class="text fr">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="img fl"><a href="#"><img src="img/content/wrap1-pic-1.jpg" alt="好吃的"></a></div>
+							<div class="text fr">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="img fl"><a href="#"><img src="img/content/wrap1-pic-2.jpg" alt="好吃的"></a></div>
+							<div class="text fr">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="side-section">
 				<h2 class="main-title">
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
 					<strong>360<sup>o</sup>SHOP<span> 全景逛店</span></strong>
 				</h2>
+				<div class="shop360">
+					<img src="img/content/360-img1.jpg" alt="">
+					<img src="img/content/360-img2.jpg" alt="">
+				</div>
 			</div>
 			<div class="side-section">
 				<h2 class="main-title">
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
-					<strong>SHOP<span> 折扣店</span></strong>
+					<strong>SHOP<span> 最新加盟</span></strong>
 				</h2>
+				<div class="wrap2">
+					<ul class="pic-list">
+						<li>
+							<div class="img"><a href="#"><img src="img/content/wrap2-pic-1.jpg" alt="好吃的"></a></div>
+							<div class="text">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="img"><a href="#"><img src="img/content/wrap2-pic-2.jpg" alt="好吃的"></a></div>
+							<div class="text">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+					</ul>
+					<ul class="list-section">	
+						<li><a href="#"><em>[<span>美食</span>]</em>至尊大闸蟹(雍和宫店）</a></li>
+						<li><a href="#"><em>[<span>美食</span>]</em>老北京(雍和宫店）</a></li>
+						<li><a href="#"><em>[<span>休闲</span>]</em>至尊大闸蟹(雍和宫店）</a></li>
+						<li><a href="#"><em>[<span>休闲</span>]</em>至尊大闸蟹(雍和宫店）</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="side-section">
 				<h2 class="main-title">
 					<a href="#" class="more">more<span class="more-icon"><span></span></span></a>
 					<strong>SHOP<span> 今日推荐</span></strong>
 				</h2>
+				<div class="wrap2">
+					<ul class="pic-list">
+						<li>
+							<div class="img"><a href="#"><img src="img/content/wrap2-pic-1.jpg" alt="好吃的"></a></div>
+							<div class="text">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="img"><a href="#"><img src="img/content/wrap2-pic-2.jpg" alt="好吃的"></a></div>
+							<div class="text">
+								<h3><a href="#">汉莱国际大酒店</a></h3>
+								<p>
+									口味：<a href="#">创意</a><br/>
+									区域：<a href="#">朝阳区CBD</a><br/>
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
