--- a/07电商网站/index.html
+++ b/07电商网站/index.html
@@ -57,7 +57,6 @@
 			{'name':'胖胖','time':'6','title':'你真棒你真棒你真棒','url':'http://www.baidu.com'},
 			{'name':'胖胖','time':'6','title':'你真棒你真棒你真棒','url':'http://www.baidu.com'},
 			{'name':'胖胖','time':'6','title':'你真棒你真棒你真棒','url':'http://www.baidu.com'},
-			{'name':'胖胖','time':'6','title':'你真棒你真棒你真棒','url':'http://www.baidu.com'},
 			{'name':'欢欢','time':'8','title':'那些美青岛啤酒节狂欢的美好的好的好的岁月','url':'http://www.baidu.com'},
 			{'name':'欢欢','time':'8','title':'那些美青岛啤酒节狂欢的美好的好的好的岁月','url':'http://www.baidu.com'},
 			{'name':'欢欢','time':'8','title':'那些美青岛啤酒节狂欢的美好的好的好的岁月','url':'http://www.baidu.com'},
@@ -71,6 +70,7 @@
 			var oBtnUp=$('#updateUp');
 			var oBtnDown=$('#updateDown');
 			var iNow=0;
+			var iNow=0;
 			var timer=null;
 			for (var i = 0; i < arrData.length; i++) {
 				str+='<li><a href="'+arrData[i].url+'"><strong>'+arrData[i].name+'</strong><span>'+arrData[i].time+'分钟前</span>写了一篇文章：'+arrData[i].title+'</a></li>'
@@ -79,8 +79,9 @@
 			// console.log(str);
 			oUl.html(str);
 			var aLi=oUl.find('li');
-			// console.log(aLi.length);
+			// console.log(aLi.eq(1).text());
 			var iH=oUl.find('li').height();
+			var aH=iH*arrData.length;
 			oBtnUp.click(function(){
 				doMove(1);
 			});
@@ -93,20 +94,32 @@
 			function autoPlay(){
 				timer=setInterval(function(){
 					doMove(-1);
-				},2000);
+				},3000);
 			};
 			autoPlay();
 			function doMove(num){
-				iNow+=num;
-				if (Math.abs(iNow)>=arrData.length-1){
-					aLi.eq(0).attr('position','absolute').css('top',iH*arrData.length);}
-				if (Math.abs(iNow)>arrData.length-1){
+				// iNow+=num;
+
+				if(iNow==0){
+					aLi.eq(0).css('position','static');
+					// iNow=-(arrData.length-1);
+				}
+				// if(iNow>0){
+				// 	iNow=-(arrData.length-1);
+				// }
+				if (Math.abs(iNow)==arrData.length-1){
+					aLi.eq(0).css({'position':'relative','top':aH});
+					// console.log('aH:'+Math.abs(aH));
+					// iNow=1;
 					iNow=0;
-					aLi.eq(0).attr('position','none').css('top',0);
-				};
-				if (iNow>0){
-					iNow=-(arrData.length-1);
-				};
+				}
+				if(iNow>0){
+					iNow==arrData.length-1;
+				}
+				iNow+=num;
+				console.log('iNow:'+Math.abs(iNow));
+				// console.log('iNow:'+Math.abs(iNow));
+
 				oUl.stop().animate({'top':iH*iNow},500);
 			};
 			// oUl.animate({'top':iH*-1},3000);
