--- a/06响应式网站/1.html
+++ b/06响应式网站/1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>CLOVECLUB</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="1.css">
 	<script type="text/javascript" src="1.js"></script>
