--- a/08Bootstrap复杂页面/bootstrap.html
+++ b/08Bootstrap复杂页面/bootstrap.html
@@ -21,6 +21,13 @@
 	<nav id="tf-menu" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+	                data-target="#navbar-collaspe">
+		            <span class="sr-only">切换导航</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		        </button>
 				<a href="" class="navbar-brand">Spirit8</a>
 			</div>
 			<div class="navbar-collapse collapse" id="navbar-collaspe">
