--- a/chenxiaolu/index.html
+++ b/chenxiaolu/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://cdn.bootcss.com/owl-carousel/1.32/owl.carousel.min.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/owl-carousel/1.32/owl.theme.min.css" rel="stylesheet">
-<!-- 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> -->
-	<link rel="stylesheet" type="text/css" href="style2.css">
+	<!-- <link rel="stylesheet" type="text/css" href="style2.css"> -->
+	<link rel="stylesheet" type="text/css" href="print.css" media="screen">
 	<!--[if lt IE 9]>
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
+<div class="container">
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -45,6 +46,8 @@
 	<div class="gradient">
 		<section id="page1" class="text-center">
 		<div class="overlay">
+		<a class="change">网页换肤</a>
+		<a class="viewprint">打印预览</a>
 			<div class="me">
 				<div class="img center">
 					<img src="img/me.jpg" alt="">
@@ -54,7 +57,6 @@
 				<h1>陈璐</h1>
 				<strong>做改变世界的参与者</strong>
 				<p>Web前端工程师</p>
-				<a href="#page2" class="fa fa-angle-down page-scroll"></a>
 			</div>
 		</div>			
 		</section>
@@ -163,35 +165,44 @@
 					<div class="line center">
 						<hr>
 					</div>
-					<p>我的项目经验巴啦啦绿绿绿绿</p>
+					<p>不断学习和进步，希望技能越来越完善</p>
 				</div>
 				<div class="box">
 					<div>
 						<h4>HTML</h4>
+						<p>超文本标记语言<br/>精通HTML5<br>熟悉Web语义化</p>
 					</div>
 					<div>
 						<h4>CSS</h4>
+						<p>层叠样式表<br/>熟练掌握CSS3<br>熟练控制网页样式和布局</p>
 					</div>
 					<div>
 						<h4>JavaScript</h4>
+						<p>脚本语言<br>JavaScript高程才看了一半<span class="glyphicon glyphicon-pushpin" style="color: red"></span></p>
 					</div>
 					<div>
 						<h4>JQuery</h4>
+						<p>JavaScript库<br>“写的更少，但做的更多”<br>各种各样的插件库有待熟练<span class="glyphicon glyphicon-pushpin" style="color: red"></p>
 					</div>
 					<div>
 						<h4>Bootstrap</h4>
+						<p>灵活的前端框架<br>可使用Bootstrap快速搭建整站<br>进阶版：在框架之上进行发挥<span class="glyphicon glyphicon-pushpin" style="color: red"></p>
 					</div>
 					<div>
 						<h4>PhotoShop</h4>
+						<p>图像处理软件<br>熟练使用PS处理图片</p>
 					</div>
 					<div>
 						<h4>Illustrator</h4>
+						<p>矢量图处理<br>熟悉AI软件，使用时创造力有待提高</p>
 					</div>
 					<div>
 						<h4>Premiere</h4>
+						<p>视频处理软件<br>可实现简单的视频剪辑和编辑</p>
 					</div>
 					<div>
 						<h4>UI</h4>
+						<p>用户界面设计<br>了解并可完成简单的UI设计，但并不精通<span class="glyphicon glyphicon-pushpin" style="color: red"></span></p>
 					</div>					
 				</div>
 			</div>
@@ -205,15 +216,15 @@
 						<div class="line center">
 							<hr>
 						</div>
-						<p>我的项目经验巴啦啦绿绿绿绿</p>
+						<p>2010年就读山东大学药学院，"985工程"院校</p>
 					</div>	
 					<div class="text pull-right">
 						<div class="step step1">
-							<p><strong>山东大学</strong>药学院本科</p>
+							<p><strong>山东大学</strong>药学院本科</p><br>
 							<img src="img/me01.jpg" alt="">
 						</div>
 						<div class="step step2">
-							<p><strong>自学</strong>PS及Web前端</p>
+							<p><strong>自学</strong>UI及Web前端</p>
 							<img src="img/me02.jpg" alt="">
 						</div>
 					</div>
@@ -222,13 +233,33 @@
 		</section>
 		<!-- page5 -->
 		<section id="page5">
-			<div class="container">
-				<div class="section-title center text-center">
-					<h2>人生经历 <strong>Experience</strong></h2>
-					<div class="line center">
-						<hr>
+			<div class="overlay">
+				<div class="container clearfix">
+					<div class="section-title center text-center">
+							<h2>人生经历 <strong>Experience</strong></h2>
+							<div class="line center">
+								<hr>
+							</div>
+							<p>不想只有一条道走到黑的人生经历，一条道走到白也不行</p>
+						</div>
+						<div class="intro">
+							<div class="step1 step">
+								<h4>2010年-2014年——山东大学药学院</h4>
+								<p class="center">集数学、化学、生物、物理等于一身的综合性学科；<br><i>一门关于健康的科学</i></p>
+							</div>
+							<div class="step2 step">
+								<h4>2014年-2016年——东方开元医药研发公司</h4>
+								<p>药物制剂研发及药物分析;从原料药到最终剂型的实现<br><i>一次关于健康科学的实践</i></p>
+							</div>
+							<div class="step3 step">
+								<h4>2016年-2017年——济南聚丰科工贸</h4>
+								<p>在研发制造及销售与一体的传统行业中,从事美工和新媒体运营<br><i>一步关于转行的试探操作</i></p>
+							</div>
+							<div class="step4 step">
+								<h4>2017年——自学Web前端</h4>
+								<p>从一无所知到一知半解到随心所欲一共需要多久<br><i>加油加油加油！！！么么哒</i></p>
 					</div>
-					<p>我的项目经验巴啦啦绿绿绿绿</p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -240,20 +271,19 @@
 					<div class="line center">
 						<hr>
 					</div>
-					<p>我的项目经验巴啦啦绿绿绿绿</p>
 				</div>
 				<div class="icon">
 					<div class="qq">
 						<a href="tencent://message/?uin=765756616&Site=&Menu=yes"><img src="img/qq.png" alt="qq"></a>
-						<p style="display: none;">QQ:765756616</p>
+						<p>QQ:765756616</p>
 					</div>
 					<div class="git">
-						<a href="https://github.com/CLovefree"><img src="img/git.png" alt="git"><a>
-						<p style="display: none;">GitHub:Clovefree</p>
+						<a href="https://github.com/CLovefree"><img src="img/git.png" alt="git"></a>
+						<p>GitHub:Clovefree</p>
 					</div>
 					<div class="mail">
 						<a href="mailto:clovelu@outlook.com"><img src="img/mail.png" alt="mail"></a>
-						<p style="display: none;">mail:clovelu@outlook.com</p>
+						<p>mail:clovelu@outlook.com</p>
 					</div>
 				</div>
 			</div>
@@ -263,9 +293,12 @@
 			<span></span>
 		</a>
 	</footer>
+	</div>
+	<script src="https://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://cdn.bootcss.com/jquery.isotope/1.5.25/jquery.isotope.min.js"></script>
+	<script src="js/js.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$(window).bind("scroll",function(){
 			var navHeight = $(window).height()-200;
@@ -318,6 +351,12 @@
                 }
             });
             return false;
+        });
+        $('#page3 .box>div').hover(function() {
+        	$(this).children('p').toggle(500);
+        });
+        $('#page5 .intro .step').hover(function() {
+        	$(this).children('p').toggle();
         });
 	</script>
 </body>
