--- a/chenxiaolu/index.html
+++ b/chenxiaolu/index.html
@@ -63,7 +63,8 @@
 			<div class="text">
 				<h1>陈璐</h1>
 				<strong>做改变世界的参与者</strong>
-				<p>Web前端工程师</p>
+				<p><i>求职意向</i>：Web前端工程师</p>
+				<p>我是一个性格开朗、做事认真的人。<br>我喜欢研究所碰到的各种问题，不给自己设定边界<br></p>
 			</div>
 		</div>			
 		</section>
